# ahoi-module

./: .gitignore  CMakeLists.txt  conanfile.py
include/: CMakeLists.txt  ahoi-module.h
src/: CMakeLists.txt  core.c
